<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.apnafinal.RegisterActivity"
    android:background="@drawable/ic_launcher1">




    <LinearLayout
        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <EditText
            android:layout_marginTop="20dp"
            android:textColorHint="#000000"
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:background="#ffffff"
            android:textColor="#000000"
            android:alpha="0.7">

            <requestFocus android:layout_width="wrap_content" />
        </EditText>

        <EditText
            android:layout_marginTop="30dp"
            android:textColorHint="#000000"

            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:background="#ffffff"
            android:textColor="#000000"
            android:alpha="0.7"/>

        <EditText
            android:layout_marginTop="40dp"

            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:alpha="0.7"
            />

        <EditText
            android:layout_marginTop="50dp"

            android:id="@+id/userPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_password_confirmation"
            android:inputType="textPassword"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textColorHint="#000000"
            android:alpha="0.7"
            />

        <TextView
            android:layout_marginTop="60dp"

            android:id="@+id/registerDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/register_disclaimer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="#ffffff"
            android:textColor="#000000"
            android:alpha="0.7"/>

        <Button

            android:layout_marginTop="70dp"

            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="registerNewAccount"
            android:text="@string/register"
            android:background="@drawable/rounded_corner"
            android:textColor="#000000"/>
    </LinearLayout>

</RelativeLayout>
